--- a/overmij.html
+++ b/overmij.html
@@ -56,7 +56,7 @@
             <img src="images/hvar.png" alt="foto van Hvar zee">
             <img src="images/brac.png" alt="foto van brac strand">
             <img src="images/kroatie.png" alt="foto kroatie uitzicht">
-            <img src="images/su.jpg" alt="foto van plantage in suriname">
+            <img src="images/su.png" alt="foto van plantage in suriname">
             <img src="images/katboos.png" alt="foto van boze kat die recht de camera in kijkt">
             <img src="images/oostenrijk.png" alt="foto van een rivier in oostenrijk">
           </section>
